# leveldb.net

./: .editorconfig  .gitignore  CMakeLists.txt  LevelDB.NET.nuspec  LevelDB.NET.sln  LevelDB.Standard.nuspec  LevelDB.Standard.targets  README.md  build-leveldb-osx.zsh  build-leveldb.cmd  build-leveldb.sh  build-nuget.cmd
DotNetFrameworkTests/: DotNetFrameworkTests.csproj  LoggerTest.cs  NativeLibraryLoadingTests.cs  NativeLibraryVersionTests.cs
Leveldb.net/: Cache.cs  Comparator.cs  CompressionLevel.cs  DB.cs  DBExtensions.cs  Env.cs  InternalLogger.cs  Iterator.cs  LevelDB.NET.csproj  LevelDBHandle.cs  LevelDBInterop.cs  LevelDbFreeHandle.cs  Logger.cs  NativePointer.cs  Options.cs  PinnedSafeHandle.cs  ReadOptions.cs  Result.cs
runtimes/osx-x64/native/: libleveldb.dylib
